Overlapping Css Correction_MH

--- a/Hiking/src/Hiking/wwwroot/css/EditProfile.css
+++ b/Hiking/src/Hiking/wwwroot/css/EditProfile.css
@@ -13,7 +13,7 @@
     font-size: 16pt;
     color: slategray;
 }
-.hr{
+.editHr{
     color: rgba(230, 230, 230, 0.70)
 }
 
@@ -45,7 +45,7 @@
     margin-left: 100px;
     
 }
-.form-control{
+.formControl{
     width: 600px;
 }
 #profPic{
